--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -14,7 +14,7 @@ video,
 canvas,
 svg {
   display: block;
-  max-width: 100%;
+  /* max-width: 100%; */
 }
 
 /* Remove built-in form typography styles */
