--- a/src/components/Layout/Article/Article.module.css
+++ b/src/components/Layout/Article/Article.module.css
@@ -1,89 +1,24 @@
-.mainWrap {
-  display: flex;
-  margin: 0 auto;
+.article {
+  /* Full width container with scroll */
   width: 100%;
-  flex-direction: column;
-  padding-top: 80px;
-  padding-bottom: 80px;
+  height: 100%;
   overflow-y: auto;
-}
 
-.content {
-  max-width: 800px;
-  margin-left: auto;
-  margin-right: auto;
+  /* Center content with modern grid */
+  display: grid;
+  grid-template-columns: minmax(28px, 1fr) min(800px, 100% - 56px) minmax(28px, 1fr);
+
+  /* Container queries */
+  container-type: inline-size;
+  container-name: article;
+
+  /* Place all content in middle column */
+  & > * {
+    grid-column: 2;
+    padding-block: 80px;
+  }
+
+  /* Base typography */
   font-size: 16px;
-  line-height: 24px;
-  box-sizing: content-box;
-  padding-left: 14px;
-  padding-right: 14px;
-}
-
-.mainWrap blockquote {
-  margin-block-start: 2em;
-  margin-block-end: 2em;
-}
-
-.mainWrap blockquote h3 {
-  margin-block-end: 0em;
-}
-
-.mainWrap blockquote p {
-  margin-block-start: 0.3em;
-  padding-left: 1em;
-}
-
-.mainWrap h1 {
-  font-weight: 500;
-  font-size: 48px;
-  line-height: 62px;
-  display: flex;
-  margin: 0 0 40px 0;
-}
-
-.mainWrap a {
-  color: var(--accent-strong);
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.content table {
-  border-collapse: collapse;
-}
-
-.content td,
-.content th {
-  padding: var(--unit);
-  border: 1px solid var(--faint-weak);
-}
-
-.content tr:nth-child(odd) {
-  background-color: var(--base-weak-up);
-}
-
-/* TODO: Atlas specific styles, move to ups config after testing */
-#app-id-9043acf9-2cf3-48ac-9656-a5d7c4b7593d #app-route-about article {
-  & section:nth-child(2) {
-    display: grid;
-    grid-template-columns: max-content auto;
-    gap: 1em;
-  }
-
-  & h3 a {
-    padding: var(--unit) 24px;
-    user-select: none;
-    font-family: var(--font-family);
-    font-weight: 400;
-    border: 1px solid var(--faint-weak);
-    border-radius: var(--border-radius);
-    min-width: 128px;
-    display: inline-block;
-    text-align: center;
-    box-sizing: border-box;
-  }
-
-  & h3 em a {
-    background-color: var(--accent-strong);
-    color: var(--base-weak) !important;
-  }
+  line-height: 1.5;
 }
