--- a/src/features/events_list/components/EventListSettingsRow/EventListSettingsRow.module.css
+++ b/src/features/events_list/components/EventListSettingsRow/EventListSettingsRow.module.css
@@ -3,5 +3,5 @@
   border-bottom: 1px solid var(--faint-weak);
   gap: var(--unit);
   display: flex;
-  flex-flow: column;
+  justify-content: space-between;
 }
