--- a/src/components/ErrorMessage/ErrorMessage.module.css
+++ b/src/components/ErrorMessage/ErrorMessage.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
-  margin: calc(var(--double-unit) * 2) var(--double-unit);
+  align-self: center;
+  margin: calc(var(--double-unit) * 2) auto;
   text-align: center;
 }
