feat(20278): add startedAt info to EventCard

--- a/src/features/events_list/components/EventCard/EventCard.module.css
+++ b/src/features/events_list/components/EventCard/EventCard.module.css
@@ -33,7 +33,13 @@
   display: flex;
   color: var(--text-faint-strong);
   justify-content: space-between;
+  align-items: end;
   width: 100%;
+}
+
+.timeInfo {
+  display: flex;
+  flex-direction: column;
 }
 
 .linkContainer {
