--- a/src/features/events_list/components/EventCard/EventCard.module.css
+++ b/src/features/events_list/components/EventCard/EventCard.module.css
@@ -33,7 +33,7 @@
   display: flex;
   color: var(--text-faint-strong);
   justify-content: space-between;
-  align-items: end;
+  align-items: flex-end;
   width: 100%;
 }
 
