--- a/src/components/MapHexTooltip/MapHexTooltip.module.css
+++ b/src/components/MapHexTooltip/MapHexTooltip.module.css
@@ -45,6 +45,7 @@
 .bivariateHexagonPopupContentRoot {
   color: var(--base-weak);
   border-radius: var(--border-radius);
+  z-index: 2;
 
   & :global(.maplibregl-popup-tip) {
     display: none;
