--- a/src/features/user_profile/components/SettingsForm/SettingsForm.module.css
+++ b/src/features/user_profile/components/SettingsForm/SettingsForm.module.css
@@ -33,7 +33,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 450px;
+  flex-grow: 1;
   margin: auto;
 
   @media screen and (max-width: 960px) {
