--- a/src/features/user_profile/components/SettingsForm/SettingsForm.module.css
+++ b/src/features/user_profile/components/SettingsForm/SettingsForm.module.css
@@ -3,6 +3,7 @@
   flex-wrap: nowrap;
   overflow-y: auto;
   padding-top: 80px;
+  --settingColumnWidth: 404px;
 
   @media screen and (max-width: 960px) {
     flex-direction: column;
@@ -24,7 +25,7 @@
   @media screen and (max-width: 960px) {
     margin: 0 0 var(--double-unit);
     row-gap: var(--double-unit);
-    max-width: 404px;
+    max-width: var(--settingColumnWidth);
   }
 }
 
@@ -52,6 +53,7 @@
     display: none;
   }
 }
+
 .mobileLogoutWrapper {
   display: none;
 
@@ -64,7 +66,7 @@
 .settingsSection {
   display: flex;
   flex-direction: column;
-  max-width: 404px;
+  max-width: var(--settingColumnWidth);
 
   & .textArea {
     width: 100%;
@@ -108,6 +110,11 @@
     width: 100%;
     text-align: start;
   }
+}
+
+.saveColumn {
+  max-width: var(--settingColumnWidth);
+  margin: 0 auto;
 }
 
 .spinnerContainer {
