--- a/src/features/toasts/components/Toast/Toast.module.css
+++ b/src/features/toasts/components/Toast/Toast.module.css
@@ -6,6 +6,14 @@
   min-height: 44px;
 }
 
+/* Mobile view */
+@media screen and (max-width: 550px) {
+  .container {
+    width: 100vw;
+    padding: 20px 40px;
+  }
+}
+
 .toast {
   padding: 10px 0 12px 0;
   box-shadow:
