--- a/src/features/toasts/components/Toast/Toast.module.css
+++ b/src/features/toasts/components/Toast/Toast.module.css
@@ -27,7 +27,7 @@
 }
 
 .text {
-  margin: 0 10px;
+  margin: 0 0 0 10px;
 }
 
 .content {
@@ -41,9 +41,10 @@
   display: flex;
 }
 
-.closeCross {
-  margin-right: 19px;
-  margin-left: auto;
+.closeButtonContainer {
+  padding: 10px;
+  width: 44px;
+  height: 44px;
   cursor: pointer;
   flex-shrink: 0;
 }
