fix(Toast): 17513 adjust position and paddings of mobile Toasts

--- a/src/features/toasts/components/ToastGroup/ToastGroup.module.css
+++ b/src/features/toasts/components/ToastGroup/ToastGroup.module.css
@@ -8,6 +8,13 @@
   z-index: 100;
 }
 
+/* Mobile view */
+@media screen and (max-width: 550px) {
+  .toasts {
+    top: var(--double-unit);
+  }
+}
+
 .enter {
   opacity: 0;
 }
