--- a/src/features/toasts/components/Toast/Toast.module.css
+++ b/src/features/toasts/components/Toast/Toast.module.css
@@ -10,7 +10,7 @@
 @media screen and (max-width: 550px) {
   .container {
     width: 100vw;
-    padding: 20px 40px;
+    padding: 0 20px;
   }
 }
 
