--- a/src/features/user_profile/components/SettingsForm/SettingsForm.module.css
+++ b/src/features/user_profile/components/SettingsForm/SettingsForm.module.css
@@ -118,7 +118,7 @@
   z-index: 10;
   background-color: white;
   border-top: 1px solid var(--faint-weak-up);
-  width: 450px;
+  width: var(--settingColumnWidth);
 
   @media screen and (max-width: 960px) {
     width: 100%;
