fix(Toasts): 17513 Adapt Toasts to screen width on mobile  (#937)
* fix(Toast): 17513 adapt Toast to screen width in mobile mode

* fix(Toast): 17513 extra clickable padding for close button in Toasts

* fix(Toast): 17513 adjust position and paddings of mobile Toasts

--- a/src/features/toasts/components/Toast/Toast.module.css
+++ b/src/features/toasts/components/Toast/Toast.module.css
@@ -6,6 +6,14 @@
   min-height: 44px;
 }
 
+/* Mobile view */
+@media screen and (max-width: 550px) {
+  .container {
+    width: 100vw;
+    padding: 0 20px;
+  }
+}
+
 .toast {
   padding: 10px 0 12px 0;
   box-shadow:
@@ -19,7 +27,7 @@
 }
 
 .text {
-  margin: 0 10px;
+  margin: 0 0 0 10px;
 }
 
 .content {
@@ -33,9 +41,10 @@
   display: flex;
 }
 
-.closeCross {
-  margin-right: 19px;
-  margin-left: auto;
+.closeButtonContainer {
+  padding: 10px;
+  width: 44px;
+  height: 44px;
   cursor: pointer;
   flex-shrink: 0;
 }
