--- a/src/features/user_profile/components/SettingsForm/SettingsForm.module.css
+++ b/src/features/user_profile/components/SettingsForm/SettingsForm.module.css
@@ -77,6 +77,7 @@
   display: flex;
   flex-direction: column;
   max-width: var(--settingColumnWidth);
+  padding-bottom: 100%;
 
   & .textArea {
     width: 100%;
@@ -169,6 +170,6 @@
 
 .tag {
   padding: calc(var(--half-unit) / 2) var(--unit);
-  border: 1px solid var(--accent-weak-up);
+  box-shadow: 0 0 0 1px var(--accent-weak-up);
   border-radius: 20px;
 }
