--- a/src/features/user_profile/components/SettingsForm/SettingsForm.module.css
+++ b/src/features/user_profile/components/SettingsForm/SettingsForm.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: nowrap;
   overflow-y: auto;
-  padding-top: 80px;
+  padding-top: 80px; /* Keep in sync with .sectionWrapper's scroll-margin-top value */
   --settingColumnWidth: 404px;
 
   @media screen and (max-width: 960px) {
@@ -77,7 +77,7 @@
   display: flex;
   flex-direction: column;
   max-width: var(--settingColumnWidth);
-  padding-bottom: 100%;
+  padding-bottom: 80%;
 
   & .textArea {
     width: 100%;
