--- a/src/features/user_profile/components/SettingsForm/SettingsSection/SettingSection.module.css
+++ b/src/features/user_profile/components/SettingsForm/SettingsSection/SettingSection.module.css
@@ -1,5 +1,10 @@
 .sectionWrapper {
   margin-bottom: calc(var(--double-unit) * 2);
+  scroll-margin-top: 80px; /* Equals the value of the container top padding */
+
+  @media screen and (max-width: 960px) {
+    scroll-margin-top: 0;
+  }
 }
 
 .section {
