fix(18332): fix privacy page horizontal scroll

--- a/src/core/pages/pages.css
+++ b/src/core/pages/pages.css
@@ -131,6 +131,7 @@
     font-family: var(--font-family);
     text-decoration: none;
     user-select: none;
+    overflow-wrap: break-word;
     -webkit-user-drag: none;
   }
 
