--- a/src/features/user_profile/components/SettingsForm/SettingsForm.module.css
+++ b/src/features/user_profile/components/SettingsForm/SettingsForm.module.css
@@ -1,9 +1,11 @@
 .contentWrap {
+  --settingColumnWidth: 404px;
+  --topOffset: 80px;
+
   display: flex;
   flex-wrap: nowrap;
   overflow-y: auto;
-  padding-top: 80px; /* Keep in sync with .sectionWrapper's scroll-margin-top value */
-  --settingColumnWidth: 404px;
+  padding-top: var(--topOffset);
 
   @media screen and (max-width: 960px) {
     flex-direction: column;
@@ -77,7 +79,7 @@
   display: flex;
   flex-direction: column;
   max-width: var(--settingColumnWidth);
-  padding-bottom: 80%;
+  padding-bottom: 60%;
 
   & .textArea {
     width: 100%;
@@ -91,7 +93,7 @@
   }
 
   & .placeholder {
-    text-wrap: wrap;
+    white-space: pre-wrap;
   }
 
   @media screen and (max-width: 960px) {
