feat(20263): implement new onboarding profile (#930)

--- a/src/features/user_profile/components/SettingsForm/ReferenceAreaInfo/ReferenceAreaInfo.module.css
+++ b/src/features/user_profile/components/SettingsForm/ReferenceAreaInfo/ReferenceAreaInfo.module.css
@@ -1,7 +1,14 @@
-.clickableText {
-  width: 100%;
-  font-size: 16px;
+.infoContainer {
   margin-top: var(--unit);
+}
+
+.linksWrapper {
+  margin-top: 12px;
+}
+
+.link {
+  font-size: 12px;
+  line-height: 16px;
   color: var(--accent-strong);
   cursor: pointer;
 }
@@ -10,17 +17,15 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
+
   & + * {
     margin-top: var(--unit);
   }
-}
-
-.hint {
-  color: var(--faint-strong);
 }
 
 .clean {
   cursor: pointer;
   color: var(--faint-strong);
   padding: var(--half-unit) 0 0 0;
+  height: 16px;
 }
