feat(19288): add mobile version for search bar

--- a/src/features/search/componets/SearchInput/SearchInput.module.css
+++ b/src/features/search/componets/SearchInput/SearchInput.module.css
@@ -1,6 +1,6 @@
 .searchInputContainer {
   display: flex;
-  box-shadow: var(--shadow-large);
+  box-shadow: var(--shadow-medium);
   background-color: var(--base-weak);
   border-radius: var(--border-radius);
 }
