--- a/src/features/user_profile/components/SettingsForm/SettingsForm.module.css
+++ b/src/features/user_profile/components/SettingsForm/SettingsForm.module.css
@@ -166,7 +166,7 @@
 .tags {
   display: flex;
   flex-wrap: wrap;
-  column-gap: 2px;
+  column-gap: var(--half-unit);
   row-gap: var(--unit);
 }
 
