fix(19288): fix collapsible state style management

--- a/src/features/search/styles.module.css
+++ b/src/features/search/styles.module.css
@@ -1,10 +1,9 @@
-.collapse {
-  display: none;
-}
-
 .searchPanel {
   @media screen and (max-width: 960px) {
     height: 100vh;
+  }
+  &.collapse {
+    display: none;
   }
 }
 
