fix(19288): pr comment fix

--- a/src/features/search/styles.module.css
+++ b/src/features/search/styles.module.css
@@ -29,6 +29,7 @@
 /* Mobile */
 @media screen and (max-width: 960px) {
   .searchPanel {
+    height: 100vh;
     height: 100dvh;
   }
 
@@ -36,7 +37,7 @@
     display: block;
   }
 
-  .contentClassName {
+  .contentContainer {
     padding: var(--unit);
   }
 
