feat(13373): adjust toolbar mobile layout

--- a/src/features/toolbar/components/ToolbarButton/ToolbarButton.module.css
+++ b/src/features/toolbar/components/ToolbarButton/ToolbarButton.module.css
@@ -14,19 +14,9 @@
   width: 5rem;
 }
 
-@media screen and (max-width: 1164px) {
-  .toolbarButton_medium,
-  .toolbarButton_tiny {
-    & span {
-      display: none;
-    }
-  }
-}
-
-@media screen and (max-width: 584px) {
-  .toolbarButton_large {
-    & span {
-      display: none;
-    }
+/* Hide file loading button on mobile as it doesn't work  */
+@media screen and (max-width: 960px) {
+  button[data-testid='UploadMCDA'] {
+    display: none;
   }
 }
