--- a/src/features/toolbar/components/ShortToolbarContent/ShortToolbarContent.module.css
+++ b/src/features/toolbar/components/ShortToolbarContent/ShortToolbarContent.module.css
@@ -11,3 +11,9 @@
   border-radius: 4px;
   border: 1px solid var(--faint-weak, #eceeef);
 }
+
+@media screen and (max-width: 960px) {
+  .toolbarContent {
+    flex-wrap: nowrap;
+  }
+}
