feat(20433): add new feature search location in reference section of profile (#977)
* feat(20432): select ref area by user location

--- a/src/features/search/componets/SearchBar/SearchBar.module.css
+++ b/src/features/search/componets/SearchBar/SearchBar.module.css
@@ -2,6 +2,10 @@
   position: relative;
 }
 
+.inputContainer {
+  box-shadow: var(--shadow-medium);
+}
+
 .infoBanner,
 .resultsList {
   position: absolute;
