fix(20960): reserve 40px height for breadcrumbs

--- a/src/features/breadcrumbs/BreadcrumbsPanel.module.css
+++ b/src/features/breadcrumbs/BreadcrumbsPanel.module.css
@@ -3,6 +3,9 @@
   background-color: transparent;
   box-shadow: none;
   overflow: visible;
-  /* negative margin used to compensate for content's margin */
-  margin: calc(-1 * var(--half-unit));
+  min-height: 40px;
+}
+
+.content {
+  overflow: visible;
 }
