--- a/src/features/search/componets/SearchInput/SearchInput.module.css
+++ b/src/features/search/componets/SearchInput/SearchInput.module.css
@@ -7,6 +7,7 @@
 
 .searchInputWrapper {
   display: flex;
+  align-items: end;
   padding: var(--unit);
   font-family: var(--font-family);
   font-weight: 400;
