--- a/src/components/Search/SearchInput/SearchInput.module.css
+++ b/src/components/Search/SearchInput/SearchInput.module.css
@@ -6,6 +6,7 @@
 
 .searchInputWrapper {
   display: flex;
+  align-items: flex-end;
   padding: var(--unit);
   font-family: var(--font-family);
   font-weight: 400;
